--- a/boost/benchmarks/index.html
+++ b/boost/benchmarks/index.html
@@ -475,7 +475,13 @@ auto test() {
 <th>Performance</th>
 </tr>
 </thead>
-<tbody></tbody>
+<tbody>
+<tr>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+</tbody>
 </table>
 <pre><code class="cpp">#include &lt;boost/di.hpp&gt;
 
@@ -641,7 +647,13 @@ class ninject {
 <th>Performance</th>
 </tr>
 </thead>
-<tbody></tbody>
+<tbody>
+<tr>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+</tbody>
 </table>
 <pre><code class="cpp">#include &lt;boost/di.hpp&gt;
 
@@ -749,7 +761,12 @@ class ninject {
 <th>Missing Bindings Error</th>
 </tr>
 </thead>
-<tbody></tbody>
+<tbody>
+<tr>
+<td></td>
+<td></td>
+</tr>
+</tbody>
 </table>
 <pre><code class="cpp">#include &lt;boost/di.hpp&gt;
 
