--- a/boost/index.html
+++ b/boost/index.html
@@ -94,7 +94,7 @@ Kris Jusiak
 <a href="https://github.com/boost-experimental/di/releases" target="_blank"><img alt="Version" src="https://badge.fury.io/gh/boost-experimental%2Fdi.svg" /></a>
 <a href="https://travis-ci.org/boost-experimental/di" target="_blank"><img alt="Build Status" src="https://img.shields.io/travis/boost-experimental/di/cpp14.svg?label=linux/osx" /></a>
 <a href="https://ci.appveyor.com/project/krzysztof-jusiak/di" target="_blank"><img alt="Build Status" src="https://img.shields.io/appveyor/ci/krzysztof-jusiak/di/cpp14.svg?label=windows" /></a>
-<a href="https://coveralls.io/r/boost-experimental/di?branch=cpp14" target="_blank"><img alt="Coveralls" src="http://img.shields.io/coveralls/boost-experimental/di/cpp14.svg" /></a>
+<a href="https://codecov.io/gh/boost-experimental/di" target="_blank"><img alt="Coveralls" src="https://codecov.io/gh/boost-experimental/di/branch/cpp14/graph/badge.svg" /></a>
 <a href="http://github.com/boost-experimental/di/issues" target="_blank"><img alt="Github Issues" src="https://img.shields.io/github/issues/boost-experimental/di.svg" /></a></p>
 <hr />
 <h1 id="introduction">Introduction</h1>
