--- a/boost/index.html
+++ b/boost/index.html
@@ -414,7 +414,7 @@ but also can help you with...</p>
 <h3 id="acknowledgements">Acknowledgements</h3>
 <ul>
 <li>Thanks to <strong>Bartosz Kalinczuk</strong> for code review and tips how to improve <code>[Boost].DI</code></li>
-<li>Thanks to <strong>Kanstantsin Chernik</strong> for all his constributions to <code>[Boost].DI</code></li>
+<li>Thanks to <strong>Kanstantsin Chernik</strong> for all his contributions to <code>[Boost].DI</code></li>
 <li>Thanks to <strong>Olof Edlund</strong> for very useful feedback and for all the improvements to the documentation</li>
 <li>Thanks to <strong>Rob Stewart</strong> and <strong>Robert Ramey</strong> for documentation feedback and tips how to improve it</li>
 <li>Thanks to <strong>Sohail Somani</strong> for support and tips how to improve <code>[Boost].DI</code></li>
