--- a/benchmarks/index.html
+++ b/benchmarks/index.html
@@ -323,26 +323,6 @@
 </tbody>
 </table>
 <ul>
-<li>Environment<ul>
-<li>x86_64 Intel(R) Core(TM) i7-4770 CPU @ 3.40GHz GenuineIntel GNU/Linux</li>
-<li>$CXX -O2</li>
-</ul>
-</li>
-</ul>
-<p>| Create a unique objects tree for each iteration<br /><br /><code>TYPES: 64</code>  <code>BINDINGS: 0</code>  <code>ITERATIONS: 1024</code> | 
-|  ------------------------ | ------------ | -------- | ---------- | -------------- |
-| <strong>Clang-3.7</strong>             | <strong>Baseline</strong> | <strong>[Boost].DI</strong> | <strong><a href="https://bitbucket.org/cheez/dicpp/wiki/Home">dicpp</a></strong>    | <strong><a href="https://github.com/google/fruit">Google.Fruit</a></strong>              |
-| Compilation time          |              | 3.082s       | 1m14.080s      | 34.461s / FRUIT_NO_LOOP_CHECK |
-| Execution time            |              | 0.002s       | -              | -                               |
-| Memory usage (stack/heap) |              | 1b/0b        | -              | -                               |
-| Executable size           |              | 72kb         | 4.4M           | 5.1M                            |
-| |  |  |  |
-| <strong>GCC-5.2</strong> |  |  |  |
-| Compilation time          |              |  | | |
-| Execution time            |              |  | | |
-| Memory usage (stack/heap) |              |  | | |
-| Executable size           |              |  | | |</p>
-<ul>
 <li>To run benchmarks</li>
 </ul>
 <pre><code class="sh">cd benchmark &amp;&amp; make
@@ -419,7 +399,7 @@
 </ul>
 </li>
 </ul>
-<p>| Create a unique objects tree for each iteration<br /><br /><code>TYPES: 64</code>  <code>BINDINGS: 0</code>  <code>ITERATIONS: 1024</code> | 
+<p>| Create a unique objects tree for each iteration<br /><br /><code>TYPES: 64</code>  <code>BINDINGS: 0</code>  <code>ITERATIONS: 1024</code> | |
 | ----------------------------------- | ------------ | ------------ | ------------------------------ | ------------------ | ------------- | --------------- |
 | <strong>Clang-3.7 -O2 / Java8 / Mono4.2 --aot</strong> | <strong>Baseline</strong> | <strong>[Boost].DI</strong> | <strong><a href="https://github.com/google/fruit">Google.Fruit</a></strong>             | <strong><a href="https://github.com/google/guice">Google.Guice</a></strong> | <strong><a href="https://github.com/google/dagger">Dagger2</a></strong> | <strong><a href="https://github.com/ninject/ninject">Ninject</a></strong>   |
 | Compilation time                    | 0.063s       | 0.376s       | 2.329s / FRUIT_NO_LOOP_CHECK   | 0.570s             | 1.411s        | 0.144s + 0.079s |
