--- a/boost/try_it/index.html
+++ b/boost/try_it/index.html
@@ -39,6 +39,10 @@
 
 namespace di = boost::di;
 
+#if defined(_MSC_VER)
+class Greater;
+#endif
+
 struct iworld {
   virtual ~iworld() noexcept = default;
 };
@@ -54,9 +58,7 @@ struct hello {
   }
 };
 
-class Greater;
-
-template &lt;class T = Greater&gt;
+template &lt;class T = class Greater&gt;
 struct example {
   T h;
   iworld&amp; w;
@@ -64,9 +66,9 @@ struct example {
 
 int main() {
   const auto injector = di::make_injector(
-    di::bind&lt;iworld&gt;().to&lt;world&gt;()    // bind interface to implementation
-  , di::bind&lt;&gt;().to(42)               // bind int to value 42
-  , di::bind&lt;Greater&gt;().to&lt;hello&gt;()   // bind template to type
+     di::bind&lt;iworld&gt;().to&lt;world&gt;()    // bind interface to implementation
+   , di::bind&lt;&gt;().to(42)               // bind int to value 42
+   , di::bind&lt;class Greater&gt;().to&lt;hello&gt;()   // bind template to type
   );
 
   injector.create&lt;example&gt;();
@@ -85,7 +87,7 @@ hljs.configure({languages:['cpp']});
 hljs.initHighlightingOnLoad();
 </script>
 
-<div class="copyright-footer">Copyright &copy; 2012-2017 Kris Jusiak (kris at jusiak net)
+<div class="copyright-footer">Copyright &copy; 2012-2018 Kris Jusiak (kris at jusiak net)
       <p>Distributed under the Boost Software License, Version 1.0.
       (See accompanying file <code class="filename">LICENSE_1_0.txt</code> or copy at
       <a href="http://www.boost.org/LICENSE_1_0.txt" target="_top">http://www.boost.org/LICENSE_1_0.txt</a>)
