--- a/boost/CHANGELOG/index.html
+++ b/boost/CHANGELOG/index.html
@@ -61,13 +61,19 @@
 <li>Support for MSVC-2017</li>
 <li>Fixed support for MSVC-2015 Update 3<blockquote></blockquote>
 </li>
-<li><strong>Core</strong></li>
-<li><a href="http://boost-experimental.github.io/di/examples/index.html#binding-templates">Support for injecting templates/concepts</a><blockquote></blockquote>
+<li><strong>Core</strong><ul>
+<li><a href="http://boost-experimental.github.io/di/examples/index.html#binding-templates">Support for injecting
+templates/concepts</a><blockquote></blockquote>
 </li>
-<li><strong>Extensions</strong></li>
-<li><a href="https://github.com/boost-experimental/di/tree/cpp14/extension/include/boost/di/extension">Extensions are now avaialbe as header files</a></li>
+</ul>
+</li>
+<li><strong>Extensions</strong><ul>
+<li><a href="https://github.com/boost-experimental/di/tree/cpp14/extension/include/boost/di/extension">Extensions are now available using header
+files</a></li>
 <li><a href="http://boost-experimental.github.io/di/extensions/index.html#extensible-injector">Extensible Injector</a></li>
 <li><a href="http://boost-experimental.github.io/di/extensions/index.html#shared-factory">Shared Factory</a><blockquote></blockquote>
+</li>
+</ul>
 </li>
 </ul>
 </li>
@@ -83,7 +89,7 @@
 </ul>
 </li>
 <li><strong>Contributions</strong><ul>
-<li>Kanstantsin Chernik</li>
+<li><a href="https://github.com/kanstantsin-chernik">Kanstantsin Chernik</a></li>
 </ul>
 </li>
 </ul>
@@ -98,9 +104,11 @@
 <li>Support for Clang-3.9</li>
 <li>Support for GCC-6<blockquote></blockquote>
 </li>
-<li><strong>Extensions</strong></li>
+<li><strong>Extensions</strong><ul>
 <li><a href="http://boost-experimental.github.io/di/extensions/index.html#contextual-bindings">Contextual Bindings</a></li>
 <li><a href="http://boost-experimental.github.io/di/extensions/index.html#serialize">Serialize</a><blockquote></blockquote>
+</li>
+</ul>
 </li>
 </ul>
 </li>
